Changes to forum

--- a/templates/Forums.html
+++ b/templates/Forums.html
@@ -22,8 +22,7 @@
             <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
             <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
             <a href="http://localhost:8000"><button class="main_page_links">Directory</button></a> 
-            {% if user.is_authenticated %}{{ user.username }}
-            {% else %}  <a href="http://localhost:5555/login"><button class="main_page_links">Log in</button></a></p>  {% endif %} 
+            <a href="http://localhost:5555/profile"><button class="main_page_links">Profile</button></a></p>
         </h2>
             
 
