--- a/templates/home.html
+++ b/templates/home.html
@@ -21,8 +21,7 @@
          <a href="http://localhost:5555/about"><button class="main_page_links">About</button></a>  
          <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
          <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
-         {% if user.is_authenticated %}{{ user.username }}</p>
-         {% else %}  <a href="http://localhost:5555/login"><button class="main_page_links">Log in</button></a>  {% endif %}    
+         <a href="http://localhost:5555/profile"><button class="main_page_links">Profile</button></a>
          </p>    
     </h2>
     <p align=center><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU" width=44% height=44%></p>
@@ -66,7 +65,6 @@
     </div>
 
     <div class="container body-content">
-        {% block content %}{% endblock %}
         <hr />
         <footer>
             <p>&copy; {{ year }} - Kent State Connect</p> <img src="https://i.imgur.com/tXtoBzH.png" alt="KSU" width=179 height=52>
