--- a/KentStateConnect/templates/profile-edit.html
+++ b/KentStateConnect/templates/profile-edit.html
@@ -7,13 +7,16 @@
 <div>
     <div>
         <form action="{{ url_for('edit_profile') }}" method="post">
+            <label for="first_name">First Name </label>
+            <input type="first_name" value="" name="first_name" id="first_name" placeholder="Optional"><br />
+            <label for="last_name">Last Name </label>
+            <input type="last_name" value="" name="last_name" id="last_name" placeholder="Optional"><br />
             <label for="username">Username</label>
-            <input type="text" value="{{ account['username'] }}" name="username" id="username" placeholder="Username">
-            <label for="password">New Password</label>
-            <input type="password" value="" name="password" id="password" placeholder="New Password">
+            <input type="text" value="{{ account['username'] }}" name="username" id="username" placeholder="Username"><br />
+            <label for="password">New Password </label>
+            <input type="password" value="" name="password" id="password" placeholder="New Password"><br />
             <label for="email">Email</label>
-            <input type="email" value="{{ account['email'] }}" name="email" id="email" placeholder="Email">
-            <br>
+            <input type="email" value="{{ account['email'] }}" name="email" id="email" placeholder="Email"><br>
             <input type="submit" value="Save">
         </form>
         <p>{{ msg }}</p>
