--- a/templates/electives.html
+++ b/templates/electives.html
@@ -22,6 +22,7 @@
          <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
          <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
          <a href="http://localhost:8000"><button class="main_page_links">Directory</button></a>
+         <a href="http://localhost:5555/profile"><button class="main_page_links">Profile</button></a>
          </p>    
     </h2>
     <p align=center><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU" width=44% height=44%></p>
