Added forum rules and changed picture size

--- a/KentStateConnect/templates/resources.html
+++ b/KentStateConnect/templates/resources.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<img src="https://i.imgur.com/p8RQptU.jpg" class="img-responsive" alt="KSU">
+<img src="https://i.imgur.com/3OITb2m.jpg" class="img-responsive" alt="KSU">
 
 <div class=jumbotron>
 
@@ -65,11 +65,19 @@
 <h3><strong>Get Involved</strong></h3>
 <p><strong>HacKSU</strong></p>
 <h4>HacKSU is a club at Kent State that helps people learn about all aspects of coding. It focuses on learning things that may not be taught at Kent State and allows students to expand their horizons.</h4>
-<p><a href="https://hacksu.cs.kent.edu/" class="btn btn-warning btn-large">HacKSU &raquo;</a></p>
+<p><a href="https://hacksu.cs.kent.edu/" class="btn btn-warning btn-large">HacKSU Website &raquo;</a>   <a href="https://discord.gg/r8vVvsE" class="btn btn-warning btn-large">HacKSU Discord &raquo;</a></p>
 <p><strong>The Blockchain and Cryptocurrency Center of Excellence</strong></p>
 <h4>The BC2 is focused on developing the skills and talents required to succeed in this new trillion dollar industry - exposing students and faculty to worldwide events, career opportunities, networking opportunities and invited guest lectures from renowned individuals in the field.</h4>
-<p><a href="https://www.kent.edu/csi/blockchain-cryptocurrency-center-excellence" class="btn btn-warning btn-large">The BC2 &raquo;</a></p>
-
+<p><a href="https://www.kent.edu/csi/blockchain-cryptocurrency-center-excellence" class="btn btn-primary btn-large">The BC2 &raquo;</a></p>
+<p><strong>The Mathematics Club</strong></p>
+<h4>The Mathematics Club at Kent State is a student organization dedicated to the promotion and enjoyment of the beauty of mathematics! Over the years they have hosted a great deal of awesome events including a mathematics-themed race across campus, a "mathemagician" show from the one and only Arthur Benjamin, many research presentations from KSU professors, and many more! They are open to every Kent State student regardless of mathematical background, so feel free to stop by any of their events!</h4>
+<p><a href="https://discord.gg/9QytbJs" class="btn btn-warning btn-large">KSU Math Discord &raquo;</a></p>
+<p><strong>The Video Games Club</strong></p>
+<h4>The Kent State University Video Games Club is a student organization that aims to create a dedicated space for gamers of all kinds to meet and celebrate gaming. They meet every Wednesday from 7pm to 10pm, come and join them!</h4>
+<p><a href="https://discord.gg/JAqyxBC" class="btn btn-primary btn-large">KSU VGC Discord &raquo;</a></p>
+<p><strong>The Cyber Security Club</strong></p>
+<h4>The Cyber Security Club is a small community of students interested in the Cyber Security field, but they accept members of any major and background. They want to learn and have fun during our meetings, and they focus on solving Cyber-Puzzles (Capture the Flag), ethical hacking and have been participating in competitive cyber security events such as CCDC and NCL. They are currently trying to put together a KSU Cyber team in order to compete against other colleges. If you are interested please contact their VP: ltoscano@kent.edu or join the Discord Server!</h4>
+<p><a href="https://discord.gg/RXbvYEA" class="btn btn-warning btn-large">Cybersecurity Club Discord &raquo;</a></p>
 </div>
 <div class="jumbotron">
 
