--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,17 @@
          <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
          </p>    
     </h2>
-    <p align=center><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU" width=44% height=44%></p>
+    <p align=center><img src="https://i.imgur.com/3OITb2m.jpg" class="img-fluid" alt="KSU"></p>
+    <div class="col-md-8 offset-md-2">
+        <h2>Forum Rules</h2>
+        <p>1. There will be no harassment under any circumstances. We want to keep this forum a welcoming place that won't discriminate against others on the basis of race, gender, sexual orientation, age, ability, religion, or political view.</p>
+        <p>2. Consider the privacy of others and yourself. Ask permission prior to giving out personal information of others and be careful with your own.</p>
+        <p>3. No inappropriate material. This will be judged in a case by case basis, but offensive comments, content, pictures, and any other form of media is not tolerated. Any media containing overtly sexual, gory, illegal, or otherwise NSFW content will be removed.</p>
+        <p>4. Do not share a link or file that could contain and/or spread malicious software. Any link or file that is suspected of being malicious will be removed.</p>
+        <p>5. Do not distribute or advertise any links or files that contain a copyrighted material, including but not limited to school textbooks and software.</p>
+        <p>6. Do not copy and/or use any work found on the Discord and claim it as your own. The moderators and tutors have an obligation to report any found plagiarism to the respective teacher(s). If helping a student with a problem, be wary of showing your own code snippets, whether in public or through DMs. This also applies to homework and test material that has not yet been submitted.</p>
+        <p><strong>NOTE:</strong> Admins reserve the right to remove posts and replies that break the forum rules.</p>
+    </div>
     <div class="card-body container" style="padding: 30px; background: white;">
         <div class="card-body container">
         <a href="http://localhost:8000/GeneralDiscussions/"><h1>General Discussions</h1></a> 
@@ -69,6 +79,7 @@
             <p>&copy; {{ year }} - Kent State Connect</p> <img src="https://i.imgur.com/tXtoBzH.png" alt="KSU" width=179 height=52>
         </footer>
     </div>
+    <br>
 </body>
 
 
