--- a/templates/Forums.html
+++ b/templates/Forums.html
@@ -37,7 +37,7 @@
                 <div class="card box container" style="padding: 10px;">
                     
                     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-                    {% if request.user.is_staff %} <form method="POST" action="http://localhost:8000/deleteforum/{{forum.id}}" >{% csrf_token %}<p align="right"><button class="btn btn-default"><span class="material-icons">delete</span></button></p></form> {% endif %}
+                    {% if request.user.is_superuser %}<form method="POST" action="http://localhost:8000/deleteforum/{{forum.id}}" >{% csrf_token %}<p align="right"><button class="btn btn-default"><span class="material-icons">delete</span></button></p></form> {% endif %}
 
                     <h5>
                         <h1>{{forum.title}}</h1>
