--- a/KentStateConnect/templates/profile.html
+++ b/KentStateConnect/templates/profile.html
@@ -23,6 +23,7 @@
             <td>{{ account[6] }}</td>
         </tr>
     </table>
-    <a href="{{ url_for('edit_profile') }}">Edit Profile</a>
+    <a href="{{ url_for('edit_profile') }}">Edit Profile</a> <br /><br />
+    <a href="/delete" <button type="button" class="btn btn-danger - btn-sm">Delete Account</button></a> <br />            
 </div>
 {% endblock %}
