--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
     </h2>
 
     <p align=center><img src="https://i.imgur.com/3OITb2m.jpg" class="img-fluid" alt="KSU"></p>
-    <div class="col-md-8 offset-md-2">
+    <div class="container" style="width: 15vw; position: absolute; left: 23vw; display:inline; background: white; padding: 10px;">
         <h2>Forum Rules</h2>
         <p>1. There will be no harassment under any circumstances. We want to keep this forum a welcoming place that won't discriminate against others on the basis of race, gender, sexual orientation, age, ability, religion, or political view.</p>
         <p>2. Consider the privacy of others and yourself. Ask permission prior to giving out personal information of others and be careful with your own.</p>
@@ -37,7 +37,7 @@
         <p><strong>NOTE:</strong> Admins reserve the right to remove posts and replies that break the forum rules.</p>
     </div>
 
-    <div class="card-body container" style="padding: 30px; background: white;">
+    <div class="card-body container" style="width: 35vw; position: absolute; right: 25vw; display: inline; background:white;">
         <div class="card-body container">
         <a href="http://localhost:8000/GeneralDiscussions/"><h1>General Discussions</h1></a> 
         <p align="right>">Total Discussions: {{generalcount}}</p>
@@ -75,7 +75,7 @@
     </div>
     </div>
 
-    <div class="container body-content">
+    <div class="container body-content" style="position: relative; bottom: -1550px;">
         <hr />
         <footer>
             <p>&copy; {{ year }} - Kent State Connect</p> <img src="https://i.imgur.com/tXtoBzH.png" alt="KSU" width=179 height=52>
