--- a/KentStateConnect/templates/login.html
+++ b/KentStateConnect/templates/login.html
@@ -17,9 +17,12 @@
                   <div class="msg">{{ msg }}</div> 
                     <input id="username" name="username" type="text" placeholder="Username" class="textbox"/></br></br> 
                     <input id="password" name="password" type="password" placeholder="Password" class="textbox"/></br></br>
-                    <label id="rememberme">
-                      <input type="checkbox" name="rememberme">Remember me
-                    </label></br></br>
+                <div class="form-check">
+                      <input class="form-check-input" type="radio" name="rememberme" id="rememberme" checked disabled>
+                      <label class="form-check-label" for="flexRadioCheckedDisabled">
+                        Remember Me
+                      </label>
+                    </div></br></br>
                   </label>
                     <input type="submit" class="btn" value="Sign In"></br>
                 </form>
