--- a/KentStateConnect/templates/profile.html
+++ b/KentStateConnect/templates/profile.html
@@ -22,7 +22,7 @@
             <td>Account Created on: </td>
             <td>{{ account[6] }}</td>
         </tr>
-    </table>
+    </table><br /> 
     <a href="{{ url_for('edit_profile') }}">Edit Profile</a><br /> <br /> 
     <a href="/delete" <button type="button" class="btn btn-danger - btn-sm">Delete Account</button></a> <br />         
 </div>
