--- a/KentStateConnect/templates/login.html
+++ b/KentStateConnect/templates/login.html
@@ -16,7 +16,7 @@
                 <form action="{{ url_for('login') }}" method="post"> 
                   <div class="msg">{{ msg }}</div> 
                     <input id="username" name="username" type="text" placeholder="Username" class="textbox"/></br></br> 
-                    <input id="password" name="password" type="password" placeholder="Password" class="textbox"/></br></br></br></br>
+                    <input id="password" name="password" type="password" placeholder="Password" class="textbox"/></br></br>
                   </label>
                     <input type="submit" class="btn" value="Sign In"></br>
                 </form>
